--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --background-color: #5FB3F9;
+}
+
 /* Navigation Bar */
 
 .navbar {
@@ -11,13 +15,18 @@
 /* Title */
 
 #title {
-    background-color: #68B984;
+    background-color: var(--background-color);
     color: #fff;
+    padding-bottom: 1rem;
 }
 
 .frontPageText {
     padding-top: 200px;
     text-align: center;
+}
+
+#LFE-Logo {
+    width: 80%;
 }
 
 /* Service */
@@ -52,7 +61,7 @@
 /* Appointment */
 
 #appointment {
-    background-color: #68B984;
+    background-color: var(--background-color);
     color: #fff;
     padding: 3% 15%;
     text-align: center;
